@@ -96,76 +96,77 @@ class TestMatingSchemes(unittest.TestCase):
       mode=MATE_PoissonDistribution))
     #print cnt
     
-  def testTrajectory(self):
-    'Testing trajectory prediction functions'
-    sel, Ne, freq, h, selection = 0.5, 100, 0.50, 2, 1
-    path = FreqTrajectorySelSim(sel, Ne, freq, h, selection)
-    # the second method, forward, with population expansion
-    low, high = 0.5, 0.55
-    mutage, grate, N0, sco = 840, 0.01, 1000000, 0.0
-    path = FreqTrajectoryForward(low, high, mutage, grate, N0, sco)
+##   def testTrajectory(self):
+##     'Testing trajectory prediction functions'
+##     sel, Ne, freq, h, selection = 0.5, 100, 0.50, 2, 1
+##     path = FreqTrajectorySelSim(sel, Ne, freq, h, selection)
+##     # the second method, forward, with population expansion
+##     low, high = 0.5, 0.55
+##     mutage, grate, N0, sco = 840, 0.01, 1000000, 0.0
+##     path = FreqTrajectoryForward(low, high, mutage, grate, N0, sco)
+## 
+##   def testTrajectoryStoch(self):
+##     'Testing the trajectory obtained from backward binomial sampling'
+##     #TurnOnDebug(DBG_MATING)
+##     #TurnOnDebug(DBG_DEVEL)
+##     # fitness
+##     #   AA     Aa      aa
+##     #    1     1+s1    1+s2
+##     # constant population size
+##     # s is default to neutral process
+##     path = FreqTrajectoryStoch(freq=0.3, N=10000)
+##     # advantageous allele, s2>s1>0 
+##     path = FreqTrajectoryStoch(freq=0.3, N=10000,fitness=[1, 1, 1.01])
+##     # overdominance, s1 > s2 > 0
+##     path = FreqTrajectoryStoch(freq=0.3, N=10000,fitness=[1, 1.02, 1])
+##     # with week purifying selection (additive)
+##     path = FreqTrajectoryStoch(freq=0.3, N=10000,fitness=[1, 0.9999, 0.9998])
+##     # population growth
+##     def NtFunc(gen):
+##       if gen < 5000:
+##         return [10000]
+##       else:
+##         return [10000*math.exp(0.001*(gen-5000))]
+##     # neutral
+##     path = FreqTrajectoryStoch(curGen=10000, freq=0.3, NtFunc=NtFunc)
+##     # advantageous allele, s2>s1>0 
+##     path = FreqTrajectoryStoch(curGen=10000, freq=0.3, NtFunc=NtFunc,fitness=[1, 1, 1.01])
+##     # overdominance, s1 > s2 > 0
+##     path = FreqTrajectoryStoch(curGen=10000, freq=0.3, NtFunc=NtFunc,fitness=[1, 1.02, 1])
+##     # with week purifying selection (additive)
+##     path = FreqTrajectoryStoch(curGen=10000, freq=0.3, NtFunc=NtFunc,fitness=[1, 0.9999, 0.9998])
+##     #
+##     # changing selection pressure
+##     def fitnessFunc(gen):
+##       if gen < 9000:  # previously positive selection
+##         return [1, 1.01, 1.02]
+##       else:           # then under purifying selection
+##         return [1, 0.999, 0.998]
+##     # neutral
+##     path = FreqTrajectoryStoch(curGen=10000, freq=0.3, NtFunc=NtFunc, fitnessFunc=fitnessFunc)
+##     # print path
+## 
+##   def testTrajectoryMultiStoch(self):
+##     'Testing the trajectory obtained from backward binomial sampling'
+##     #TurnOnDebug(DBG_MATING)
+##     #path = FreqTrajectoryMultiStoch(freq=[0.1], N=10000, 
+##     # fitness=[1, 1,01, 1.02], maxMutAge=100000)
+##     path = FreqTrajectoryMultiStoch(freq=[0.05, 0.1], N=10000, 
+##      fitness=[1, 1.01, 1.02, 1, 1.002, 1.002],
+##      maxMutAge=100000)
+##     # using sFunc
+##     def s(gen, freq):
+##       if gen < 9000:
+##         return [1, 1.01, 1.02, 1, 1.002, 1.002]
+##       else:
+##         return [1, 0.99, 0.98, 1, 0.999, 0.998]
+##     path = FreqTrajectoryMultiStoch(curGen=10000, 
+##       freq=[0.05, 0.1], N=10000, 
+##       fitnessFunc=s, maxMutAge=10000)
+##     # then , with frequency dependent?
+##     #print path.numTraj(), path.maxLen(), path.traj(0), path.traj(1)
+##  
 
-  def testTrajectoryStoch(self):
-    'Testing the trajectory obtained from backward binomial sampling'
-    #TurnOnDebug(DBG_MATING)
-    #TurnOnDebug(DBG_DEVEL)
-    # fitness
-    #   AA     Aa      aa
-    #    1     1+s1    1+s2
-    # constant population size
-    # s is default to neutral process
-    path = FreqTrajectoryStoch(freq=0.3, N=10000)
-    # advantageous allele, s2>s1>0 
-    path = FreqTrajectoryStoch(freq=0.3, N=10000,fitness=[1, 1, 1.01])
-    # overdominance, s1 > s2 > 0
-    path = FreqTrajectoryStoch(freq=0.3, N=10000,fitness=[1, 1.02, 1])
-    # with week purifying selection (additive)
-    path = FreqTrajectoryStoch(freq=0.3, N=10000,fitness=[1, 0.9999, 0.9998])
-    # population growth
-    def NtFunc(gen):
-      if gen < 5000:
-        return [10000]
-      else:
-        return [10000*math.exp(0.001*(gen-5000))]
-    # neutral
-    path = FreqTrajectoryStoch(curGen=10000, freq=0.3, NtFunc=NtFunc)
-    # advantageous allele, s2>s1>0 
-    path = FreqTrajectoryStoch(curGen=10000, freq=0.3, NtFunc=NtFunc,fitness=[1, 1, 1.01])
-    # overdominance, s1 > s2 > 0
-    path = FreqTrajectoryStoch(curGen=10000, freq=0.3, NtFunc=NtFunc,fitness=[1, 1.02, 1])
-    # with week purifying selection (additive)
-    path = FreqTrajectoryStoch(curGen=10000, freq=0.3, NtFunc=NtFunc,fitness=[1, 0.9999, 0.9998])
-    #
-    # changing selection pressure
-    def fitnessFunc(gen):
-      if gen < 9000:  # previously positive selection
-        return [1, 1.01, 1.02]
-      else:           # then under purifying selection
-        return [1, 0.999, 0.998]
-    # neutral
-    path = FreqTrajectoryStoch(curGen=10000, freq=0.3, NtFunc=NtFunc, fitnessFunc=fitnessFunc)
-    # print path
-
-  def testTrajectoryMultiStoch(self):
-    'Testing the trajectory obtained from backward binomial sampling'
-    #TurnOnDebug(DBG_MATING)
-    #path = FreqTrajectoryMultiStoch(freq=[0.1], N=10000, 
-    # fitness=[1, 1,01, 1.02], maxMutAge=100000)
-    path = FreqTrajectoryMultiStoch(freq=[0.05, 0.1], N=10000, 
-     fitness=[1, 1.01, 1.02, 1, 1.002, 1.002],
-     maxMutAge=100000)
-    # using sFunc
-    def s(gen, freq):
-      if gen < 9000:
-        return [1, 1.01, 1.02, 1, 1.002, 1.002]
-      else:
-        return [1, 0.99, 0.98, 1, 0.999, 0.998]
-    path = FreqTrajectoryMultiStoch(curGen=10000, 
-      freq=[0.05, 0.1], N=10000, 
-      fitnessFunc=s, maxMutAge=10000)
-    # then , with frequency dependent?
-    #print path.numTraj(), path.maxLen(), path.traj(0), path.traj(1)
- 
   def testControlledMating(self):
     'Testing controlled mating'
     # planned trajectory
@@ -377,42 +378,42 @@ class TestMatingSchemes(unittest.TestCase):
       end=endingGen
     )
     
-  def testFreqTrajWithSubPop(self):
-    'Testing trajctory simulation with subpopulation structure'
-    #TurnOnDebug(DBG_MATING)
-    #TurnOnDebug(DBG_GENERAL)
-    from simuUtil import FreqTrajectoryMultiStochWithSubPop
-    initSize = 10000
-    endingSize = 200000
-    burninGen = 4000
-    splitGen = 6000
-    mixingGen = 9000
-    endingGen = 10000
-    numSubPop = 3
-    numLoci = 5
-    def popSizeFunc(gen, curSize=[]):
-      if gen < burninGen:
-        return [initSize]
-      rate =  (math.log(endingSize)-math.log(initSize))/(endingGen-burninGen)
-      if gen < splitGen:
-        return [int(initSize*math.exp((gen-burninGen)*rate))]
-      else:
-        return [int(initSize*math.exp((gen-burninGen)*rate)/numSubPop)]*numSubPop
-    (traj, gens, trajFunc) = FreqTrajectoryMultiStochWithSubPop(
-      curGen = endingGen,
-      # five dsl, five subpopulation
-      numLoci=numLoci,
-      freq=[0.5]*(numSubPop*5), 
-      NtFunc=popSizeFunc, 
-      fitness=[1, 1.0007, 1.0014]*5, 
-      minMutAge=endingGen-splitGen, 
-      maxMutAge=endingGen-burninGen, 
-      restartIfFail=True)
-    self.assertEqual( len(trajFunc(splitGen)), numLoci*numSubPop)
-    self.assertEqual( len(trajFunc(splitGen-1)), numLoci)
-    for i in range(len(gens)):
-      assert trajFunc(gens[i])[i] > 0
-      assert trajFunc(gens[i]-1)[i] == 0
+##   def testFreqTrajWithSubPop(self):
+##     'Testing trajctory simulation with subpopulation structure'
+##     #TurnOnDebug(DBG_MATING)
+##     #TurnOnDebug(DBG_GENERAL)
+##     from simuUtil import FreqTrajectoryMultiStochWithSubPop
+##     initSize = 10000
+##     endingSize = 200000
+##     burninGen = 4000
+##     splitGen = 6000
+##     mixingGen = 9000
+##     endingGen = 10000
+##     numSubPop = 3
+##     numLoci = 5
+##     def popSizeFunc(gen, curSize=[]):
+##       if gen < burninGen:
+##         return [initSize]
+##       rate =  (math.log(endingSize)-math.log(initSize))/(endingGen-burninGen)
+##       if gen < splitGen:
+##         return [int(initSize*math.exp((gen-burninGen)*rate))]
+##       else:
+##         return [int(initSize*math.exp((gen-burninGen)*rate)/numSubPop)]*numSubPop
+##     (traj, gens, trajFunc) = FreqTrajectoryMultiStochWithSubPop(
+##       curGen = endingGen,
+##       # five dsl, five subpopulation
+##       numLoci=numLoci,
+##       freq=[0.5]*(numSubPop*5), 
+##       NtFunc=popSizeFunc, 
+##       fitness=[1, 1.0007, 1.0014]*5, 
+##       minMutAge=endingGen-splitGen, 
+##       maxMutAge=endingGen-burninGen, 
+##       restartIfFail=True)
+##     self.assertEqual( len(trajFunc(splitGen)), numLoci*numSubPop)
+##     self.assertEqual( len(trajFunc(splitGen-1)), numLoci)
+##     for i in range(len(gens)):
+##       assert trajFunc(gens[i])[i] > 0
+##       assert trajFunc(gens[i]-1)[i] == 0
   
 if __name__ == '__main__':
   unittest.main()
