@@ -11,6 +11,7 @@ version 0.6.14 - (Rev 341) - June 06, 2006
   - NEW: add a local scons build system for developers
   - BUG: fix the variable update bug.
   - BUG: fix setRNG(seed) bug.
+  - CHG: rename setRNG() to SetRNG(), and listAllRNG() to ListAllRNG()
 
 version 0.6.13 - (Rev 278) - Apr. 20, 2006
   - NEW: Add trajectory simulation functions follows those from selSim
